syntax = "proto3";

package com.ngc.seaside.threateval.tps.common.datatype;

option java_multiple_files = true;

import "com/ngc/seaside/threateval/tps/common/datatype/SystemTrackIdentifier.proto";

message DroppedSystemTrack {

   com.ngc.seaside.threateval.tps.common.datatype.SystemTrackIdentifier identifier = 1;

}
