syntax = "proto3";

package com.ngc.seaside.threateval.tps.datatype;

option java_multiple_files = true;

import "com/ngc/seaside/threateval/tps/common/datatype/SystemTrackIdentifier.proto";

message PrioritizedSystemTrackIdentifiers {

   repeated com.ngc.seaside.threateval.tps.common.datatype.SystemTrackIdentifier identifiers = 1;

}
